fix bug on alignment of users show data due to width issue

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -155,8 +155,8 @@
 }
 
 .users_show_data {
-    width: 100px;
     display: block;
+    width: 100%;
     margin-top: 3px;
 }
 
